--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rainydays | Home</title>
+    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
+</head>
+<body>
+  <header>
+    <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+    <nav>
+      <ul>
+        <li><a href="index.html"></a></li>
+        <li><a href="man.html">man</a></li>
+        <li><a href="woman.html">woman</a></li>
+        <li><a href="kid.html">kid</a></li>
+        <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="welcome">
+        <div class="welcome__content">
+          <h1>Pushing the Comfort Zone</h1>
+          <a href="newproducts.html" class="cta">New Products</a>
+        </div>
+    </section>
+    <section class="content">
+        <div>
+            <p>A raincoat also known as rainsuit. In most fashion market, including America, France</p>
+            <p>Asia, etc raincoat refers to both the top and bottom including trousers</p>
+        </div>
+    </section>
+    <section class="featured">
+        <div class="products">
+            <img src="images/AdobeStock_462809198_Preview.jpeg" alt="Lady in blue raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+        <div class="products">
+            <img src="images/AdobeStock_354626130_Preview.jpeg" alt="Young man in blue raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div> 
+        <div class="products">
+            <img src="images/AdobeStock_372194377_Preview.jpeg" alt="Young woman in blue raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+        <div class="products">
+            <img src="images/AdobeStock_401290573_Preview.jpeg" alt="Little girl in yellow raincoat"/>
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+        <div class="products">
+            <img src="images/AdobeStock_463822293_Preview.jpeg" alt="Young woman in yellow raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+        <div class="products">
+            <img src="images/AdobeStock_71602384_Preview.jpeg" alt="Young woman in red raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+        <div class="products">
+            <img src="images/AdobeStock_310652645_Preview.jpeg" alt="Young woman in orange raincoat" />
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+        </div>
+    </section>
+  </main>
+</body>
+</html>
