Changes after feedback from MJ

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fashionable and sporty raincoats for active people" />
     <title>Rainydays | Home</title>
-    <link href="styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
+    <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
   <header>
     <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+    <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+    <input type="checkbox" id="hamburger-menu">
     <nav>
       <ul>
         <li><a href="man.html">man</a></li>
@@ -21,12 +24,12 @@
     </nav>
   </header>
   <main>
-    <section class="welcome">
+    <div class="welcome">
         <div class="welcome__content">
           <h1>Pushing the Comfort Zone</h1>
           <a href="newproducts.html" class="cta">New Products</a>
         </div>
-    </section>
+      </div>
     <section class="content">
         <div>
             <p>A raincoat also known as rainsuit. In most fashion market, including America, France</p>
