--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
     <nav>
       <ul>
-        <li><a href="man.html">man</a></li>
-        <li><a href="woman.html">woman</a></li>
-        <li><a href="kid.html">kid</a></li>
+        <li><a href="men.html">men</a></li>
+        <li><a href="women.html">women</a></li>
+        <li><a href="kids.html">kids</a></li>
         <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
       </ul>
     </nav>
