--- a/men.html
+++ b/men.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="View our new, fashionable and sporty raincoats" />
+    <meta name="description" content="Fashionable and sporty raincoats for active men" />
     <title>Rainydays | Woman</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
@@ -21,10 +21,9 @@
           </ul>
         </nav>
       </header>
-      <main class="products-new">
-        <h1>New products</h1>
-        <h2>Home/new products</h2>
-        
+      <main class="products-men">
+        <h1>Raincoats for men</h1>
+        <h2>Home/men</h2>
 
     </main>
 </body>
