ready with the product base on woman site

--- a/women.html
+++ b/women.html
@@ -26,10 +26,41 @@
           <h2>Home/women</h2>
           <section class="product-list">
             <div class="products">
-                <img src=""/>
-
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
             </div>
-
+            <div class="products">
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
+            </div>
+            <div class="products">
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
+            </div>
+            <div class="products">
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
+            </div>
+            <div class="products">
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
+            </div>
+            <div class="products">
+              <img src=""/ alt="Woman in yellow jacket in blowing wind">
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+              <a href="jacketspecific.html"></a>
+            </div>
         </section>
       </main>
 </body>  
