new products are in the air

--- a/newproducts.html
+++ b/newproducts.html
@@ -24,7 +24,80 @@
       <main class="products-new">
         <h1>New products</h1>
         <h2>Home/new products</h2>
-        
+        <section class="product-list">
+            <div class="products">
+                <img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Woman in yellow jacket with camera">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Woman in yellow jacket on the cornfield">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_yellow_jacket_on_bike.jpeg" alt="Woman in yellow jacket on a bike">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/goldjacket.jpg" alt="Woman in yellow jacket on the flowerfields">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/jakkeforest.jpg" alt="Woman in yellow jacket in the forest">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Laughing_woman_in_blue_jacket.jpeg" alt="Laughing woman in blue jacket">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Woman in darl blue jacket">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in light blue jacket">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_blue_jacket_with_glasses.jpeg" alt="Woman in blue jacket with glasses">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+              <div class="products">
+                <img src="images/Woman_in_blue_jacket_with_camera.jpeg" alt="Woman in blue jacket with a camera">
+                <h2>Softshell Raincoat</h2>
+                <p>650 USD</p>
+                <a href="jacketspecific.html"></a>
+              </div>
+          </section>
 
     </main>
 </body>
