--- a/women.html
+++ b/women.html
@@ -50,13 +50,13 @@
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="" alt="Woman in yellow jacket in blowing wind">
+              <img src="images/goldjacket.jpg" alt="Woman in yellow jacket on the flowerfields">
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/goldjacket.jpg" alt="Woman in yellow jacket on a flower field">
+              <img src="images/jakkeforest.jpg" alt="Woman in yellow jacket in the forest">
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
@@ -80,7 +80,7 @@
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke">
+              <img src="images/Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke">
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
