men products are on the page

--- a/men.html
+++ b/men.html
@@ -24,6 +24,79 @@
       <main class="products-men">
         <h1>Raincoats for men</h1>
         <h2>Home/men</h2>
-
+        <section class="product-list">
+          <div class="products">
+            <img src="images/Man_in_yellow_hetta.jpeg" alt="Man in yellow jacket and hat">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_yellow_hat.jpeg" alt="Man in yellow jacket and a hat">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_yellow_jacket.jpeg" alt="Man in yellow jacket">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_yellow_jacket_in_forest.jpeg" alt="Man in yellow jacket in the forest">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_yellow_jacket_on_the_rock.jpeg" alt="Man in yellow jacket on the rock">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_yellow_jacket_shore.jpeg" alt="Man in yellow jacket on the shore">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+      </section>
     </main>
 </body>
