kid product are in the air

--- a/kids.html
+++ b/kids.html
@@ -24,6 +24,79 @@
       <main class="products-kids">
         <h1>Raincoats for kids</h1>
         <h2>Home/kids</h2>
-
+        <section class="product-list">
+          <div class="products">
+            <img src="images/Kid_in_beige_jacket.jpeg" alt="Little girl in beige jacket jumping in the water">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_blue_jacket.jpeg" alt="Little girl in light blue jacket jumping in the water">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_green_jacket_with_umbrella.jpeg" alt="Kid in dark green jacket with an umbrella">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_red_jacket.jpeg" alt="Little boy in red jacket and an umbrella">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_green_jacket.jpeg" alt="Little boy in green jacket in the rain">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_yellow_jacket_in_water.jpeg" alt="Kid in yellow jacket playing with a paper boat">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_polkadots.jpeg" alt="Little girl in polkadot jacket under the rainbow">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_rosa_jacket.jpeg" alt="Little girl in rose jacket under umbrella">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_yellow_jacket_with_rainbowumbrella.jpeg" alt="Little girl in yellow jacket under a rainbow umbrella">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Little_girl_in_yellow_jacket.jpeg" alt="Little girl in yellow jacket">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_white_jacket.jpeg" alt="Little girl in white jacket under an umbrella">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+          <div class="products">
+            <img src="images/Kid_in_yellow_jacket_under_umbrella.jpeg" alt="Little girl in yellow jacket in the rain">
+            <h2>Softshell Raincoat</h2>
+            <p>650 USD</p>
+            <a href="jacketspecific.html"></a>
+          </div>
+      </section>
     </main>
 </body>
