logo set as homepage link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
   <header>
-    <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+    <div class="header-inner">
+      <div class="logo-container">
+        <a href="index.html">
+        <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+      </div>
+    </div>
     <nav>
       <ul>
         <li><a href="men.html">men</a></li>
