--- a/kids.html
+++ b/kids.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <header>
-        <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+      <div class="header-inner">
+        <div class="logo-container">
+          <a href="index.html">
+          <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+        </div>
+      </div>
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
@@ -21,10 +26,10 @@
           </ul>
         </nav>
       </header>
-      <main class="products-kids">
+      <main class="jackets">
         <h1>Raincoats for kids</h1>
         <h2>Home/kids</h2>
-        <section class="product-list">
+        <section class="featured">
           <div class="products">
             <img src="images/Kid_in_beige_jacket.jpeg" alt="Little girl in beige jacket jumping in the water">
             <h2>Softshell Raincoat</h2>
