--- a/men.html
+++ b/men.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <header>
-        <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+      <div class="header-inner">
+        <div class="logo-container">
+          <a href="index.html">
+          <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+        </div>
+      </div>
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
@@ -21,10 +26,10 @@
           </ul>
         </nav>
       </header>
-      <main class="products-men">
+      <main class="jackets">
         <h1>Raincoats for men</h1>
         <h2>Home/men</h2>
-        <section class="product-list">
+        <section class="featured">
           <div class="products">
             <img src="images/Man_in_yellow_hetta.jpeg" alt="Man in yellow jacket and hat">
             <h2>Softshell Raincoat</h2>
