ready with base of checkout and jacketspecific pages

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
       </div>
     </div>
+    <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
+    <input type="checkbox" id="hamburger-menu">
     <nav>
       <ul>
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
         <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+        <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
   </header>
