--- a/newproducts.html
+++ b/newproducts.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View our new, fashionable and sporty raincoats" />
-    <title>Rainydays | Woman</title>
+    <title>Rainydays | New Products</title>
     <link rel="stylesheet" href="https://use.typekit.net/ocq6hsb.css" type="text/css">
     <link href="css/styles.css" rel="stylesheet" />
 </head>
