--- a/women.html
+++ b/women.html
@@ -31,73 +31,72 @@
           <h2>Home/women</h2>
           <section class="featured">
             <div class="products">
-              <img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind">
+              <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind"></a>
+              <h2>Softshell Raincoat</h2>
+              <p>650 USD</p>
+            </div>
+            <div class="products">
+              <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Woman in yellow jacket with camera"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Woman in yellow jacket with camera">
+              <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Woman in yellow jacket on the cornfield"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Woman in yellow jacket on the cornfield">
+              <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_on_bike.jpeg" alt="Woman in yellow jacket on a bike"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_yellow_jacket_on_bike.jpeg" alt="Woman in yellow jacket on a bike">
+              <a href="jacketspecific.html"><img src="images/goldjacket.jpg" alt="Woman in yellow jacket on the flowerfields"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/goldjacket.jpg" alt="Woman in yellow jacket on the flowerfields">
+              <a href="jacketspecific.html"><img src="images/jakkeforest.jpg" alt="Woman in yellow jacket in the forest"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/jakkeforest.jpg" alt="Woman in yellow jacket in the forest">
+              <a href="jacketspecific.html"><img src="images/Laughing_woman_in_blue_jacket.jpeg" alt="Laughing woman in blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Laughing_woman_in_blue_jacket.jpeg" alt="Laughing woman in blue jacket">
+              <a href="jacketspecific.html"><img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Woman in darl blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Woman in darl blue jacket">
+              <a href="jacketspecific.html"><img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in light blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in light blue jacket">
+              <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke">
+              <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_glasses.jpeg" alt="Woman in blue jacket with glasses"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
-              <img src="images/Woman_in_blue_jacket_with_glasses.jpeg" alt="Woman in blue jacket with glasses">
-              <h2>Softshell Raincoat</h2>
-              <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
-            </div>
-            <div class="products">
-              <img src="images/Woman_in_blue_jacket_with_camera.jpeg" alt="Woman in blue jacket with a camera">
+              <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_camera.jpeg" alt="Woman in blue jacket with a camera"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
               <a href="jacketspecific.html"></a>
