--- a/men.html
+++ b/men.html
@@ -31,73 +31,73 @@
         <h2>Home/men</h2>
         <section class="featured">
           <div class="products">
-            <img src="images/Man_in_yellow_hetta.jpeg" alt="Man in yellow jacket and hat">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_hetta.jpeg" alt="Man in yellow jacket and hat"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_yellow_hat.jpeg" alt="Man in yellow jacket and a hat">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_hat.jpeg" alt="Man in yellow jacket and a hat"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_yellow_jacket.jpeg" alt="Man in yellow jacket">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket.jpeg" alt="Man in yellow jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_yellow_jacket_in_forest.jpeg" alt="Man in yellow jacket in the forest">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_in_forest.jpeg" alt="Man in yellow jacket in the forest"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_yellow_jacket_on_the_rock.jpeg" alt="Man in yellow jacket on the rock">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_on_the_rock.jpeg" alt="Man in yellow jacket on the rock"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_yellow_jacket_shore.jpeg" alt="Man in yellow jacket on the shore">
+            <a href="jacketspecific.html"><img src="images/Man_in_yellow_jacket_shore.jpeg" alt="Man in yellow jacket on the shore"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag">
+            <a href="jacketspecific.html"><img src="images/Man_with_a_bag.jpeg" alt="Man in green jacket on a bike with a bag"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket">
+            <a href="jacketspecific.html"><img src="images/Man_in_light_green_jacket.jpeg" alt="Man in light green jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket">
+            <a href="jacketspecific.html"><img src="images/Man_in_red_jacket_fjell.jpeg" alt="Man with beard in red jacket"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain">
+            <a href="jacketspecific.html"><img src="images/Man_in_dark_blue_jacket.jpeg" alt="Man in dark blue jacket in the rain"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap">
+            <a href="jacketspecific.html"><img src="images/Man_in_green_jacket.jpeg" alt="Man in green jacket and cap"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
           </div>
           <div class="products">
-            <img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest">
+            <a href="jacketspecific.html"><img src="images/Man_in_hat.jpeg" alt="Man in green jacket in the forest"></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
             <a href="jacketspecific.html"></a>
