hamburger menu to every page

--- a/newproducts.html
+++ b/newproducts.html
@@ -17,6 +17,8 @@
               <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
             </div>
           </div>
+          <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
+          <input type="checkbox" id="hamburger-menu">
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
