cleaning up the homepage mess

--- a/men.html
+++ b/men.html
@@ -31,7 +31,7 @@
       </header>
       <main class="jackets">
         <h1>Raincoats for men</h1>
-        <h2>Home/men</h2>
+        <h2>Home/Men</h2>
         <section class="featured">
           <div class="products">
             <a href="jacketspecific.html"><img src="images/Man_in_yellow_hetta.jpeg" alt="Man in yellow jacket and hat"></a>
