--- a/newproducts.html
+++ b/newproducts.html
@@ -31,7 +31,7 @@
       </header>
       <main class="jackets">
         <h1>New products</h1>
-        <h2>Home/new products</h2>
+        <h2>Home/New Products</h2>
         <section class="featured">
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind"></a>
