--- a/kids.html
+++ b/kids.html
@@ -31,7 +31,7 @@
       </header>
       <main class="jackets">
         <h1>Raincoats for kids</h1>
-        <h2>Home/kids</h2>
+        <h2>Home/Kids</h2>
         <section class="featured">
           <div class="products">
             <a href="jacketspecific.html"><img src="images/Kid_in_beige_jacket.jpeg" alt="Little girl in beige jacket jumping in the water"></a>
