--- a/women.html
+++ b/women.html
@@ -31,7 +31,7 @@
       </header>
       <main class="jackets">
           <h1>Raincoats for women</h1>
-          <h2>Home/women</h2>
+          <h2>Home/Women</h2>
           <section class="featured">
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_in_wind.jpeg" alt="Woman in yellow jacket in blowing wind"></a>
