--- a/index.html
+++ b/index.html
@@ -11,31 +11,24 @@
 </head>
 <body>
   <header>
-    <div class="header-inner">
-      <div class="logo-container">
-        <a href="index.html">
-        <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-      </div>
-    </div>
-    <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
-    <input type="checkbox" id="hamburger-menu">
-    <nav>
+        <a href="#"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
+      <nav>
       <ul>
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
-        <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+        <li><a href="#"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
         <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class="welcome">
+    <section class="welcome">
         <div class="welcome__content">
           <h1>Pushing the Comfort Zone</h1>
           <a href="newproducts.html" class="cta">New Products</a>
         </div>
-      </div>
+      </section>
     <section class="content">
         <div>
             <p>A raincoat also known as rainsuit. In most fashion market, including America, France</p>
