cleaning up in headers

--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
     </section>
     <section class="featured">
         <div class="products">
-            <img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in blue raincoat" />
+          <a href="jacketspecific.html"><img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in blue raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
         <div class="products">
-            <img src="images/Men_in_blue_jacket.jpeg" alt="Young man in blue raincoat" />
+          <a href="jacketspecific.html"><img src="images/Men_in_blue_jacket.jpeg" alt="Young man in blue raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div> 
         <div class="products">
-            <img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Young woman in blue raincoat" />
+          <a href="jacketspecific.html"><img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Young woman in blue raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
         <div class="products">
-            <img src="images/Little_girl_in_yellow_jacket.jpeg" alt="Little girl in yellow raincoat"/>
+          <a href="jacketspecific.html"><img src="images/Little_girl_in_yellow_jacket.jpeg" alt="Little girl in yellow raincoat"/></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
         <div class="products">
-            <img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Young woman in yellow raincoat" />
+          <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Young woman in yellow raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
         <div class="products">
-            <img src="images/Woman_in_red_jacket.jpeg" alt="Young woman in red raincoat" />
+          <a href="jacketspecific.html"><img src="images/Woman_in_red_jacket.jpeg" alt="Young woman in red raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
         <div class="products">
-            <img src="images/Woman_in_orange_jacket.jpeg" alt="Young woman in orange raincoat" />
+          <a href="jacketspecific.html"><img src="images/Woman_in_orange_jacket.jpeg" alt="Young woman in orange raincoat" /></a>
             <h2>Softshell Raincoat</h2>
             <p>650 USD</p>
         </div>
