--- a/women.html
+++ b/women.html
@@ -11,20 +11,13 @@
 </head>
 <body>
     <header>
-      <div class="header-inner">
-        <div class="logo-container">
-          <a href="index.html">
-          <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-        </div>
-      </div>
-      <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
-      <input type="checkbox" id="hamburger-menu">
+          <a href="index.html"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
             <li><a href="women.html">women</a></li>
             <li><a href="kids.html">kids</a></li>
-            <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+            <li><a href="#"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
             <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
           </ul>
         </nav>
@@ -42,67 +35,56 @@
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_with_camera.jpeg" alt="Woman in yellow jacket with camera"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_on_the_cornfield.jpeg" alt="Woman in yellow jacket on the cornfield"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_yellow_jacket_on_bike.jpeg" alt="Woman in yellow jacket on a bike"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/goldjacket.jpg" alt="Woman in yellow jacket on the flowerfields"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/jakkeforest.jpg" alt="Woman in yellow jacket in the forest"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Laughing_woman_in_blue_jacket.jpeg" alt="Laughing woman in blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_dark_blue_jacket.jpeg" alt="Woman in darl blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Lady_in_light_blue_jacket.jpeg" alt="Lady in light blue jacket"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_smoke.jpeg" alt="Woman in blue jacket with smoke"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_glasses.jpeg" alt="Woman in blue jacket with glasses"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
             <div class="products">
               <a href="jacketspecific.html"><img src="images/Woman_in_blue_jacket_with_camera.jpeg" alt="Woman in blue jacket with a camera"></a>
               <h2>Softshell Raincoat</h2>
               <p>650 USD</p>
-              <a href="jacketspecific.html"></a>
             </div>
         </section>
       </main>
