--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -11,14 +11,7 @@
 </head>
 <body>
     <header>
-      <div class="header-inner">
-        <div class="logo-container">
-          <a href="index.html">
-          <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-        </div>
-      </div>
-      <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
-      <input type="checkbox" id="hamburger-menu">
+          <a href="index.html"><img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
         <nav>
           <ul>
             <li><a href="men.html">men</a></li>
