--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -19,7 +19,13 @@
             <li><a href="kids.html">kids</a></li>
             <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
             <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
-      </ul>
           </ul>
         </nav>
       </header>
+      <main>
+        <section class="success">
+          <div class="success__content">
+            <h1>Thank you for your order!</h1>
+          </div>
+        </section>
+      </main>
