--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -17,7 +17,7 @@
             <li><a href="men.html">men</a></li>
             <li><a href="women.html">women</a></li>
             <li><a href="kids.html">kids</a></li>
-            <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+            <li><a href="#"><img id="search" src=images/Search_icon.jpg alt="search button">search</a></li>
             <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
           </ul>
         </nav>
