--- a/checkoutsuccess.html
+++ b/checkoutsuccess.html
@@ -23,7 +23,7 @@
         </nav>
       </header>
       <main>
-        <section class="success" style="background-image: url(images/Success.jpg);">
+        <section class="success" style="background-image: url(images/Success.jpeg);">
           <div class="success__content">
             <h1>Thank you for your order!</h1>
           </div>
