--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,21 @@
 </head>
 <body>
   <header>
-    <div class="header-inner">
-      <div class="logo-container">
         <a href="index.html">
-        <img src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
-      </div>
-    </div>
-    <label for="hamburger-menu"><i class="fas fa-bar">&#xf0c9</i></label>
-    <input type="checkbox" id="hamburger-menu">
+        <img id="logo" src="images/RainyDays_Logo_eredeti_hegy.png" alt="Rainydays logo"></a>
     <nav>
       <ul>
         <li><a href="men.html">men</a></li>
         <li><a href="women.html">women</a></li>
         <li><a href="kids.html">kids</a></li>
-        <li><a href="#"><img id="search" src="images/240_F_127722883_DD4Sp3V30YxvYut3sRsaJqv7TKloEuyH.jpg" alt="search button">search</a></li>
+        <li><a href="#"><img id="search" src="images/Search_icon.jpg" alt="search button">search</a></li>
         <li><a href=checkout.html><img id="checkout" src="images/shopping_basket.png" alt="shopping basket button"></a></li>
       </ul>
     </nav>
   </header>
+<main>
+  <div>
+    <img src="images/Contact.jpeg" alt="Young couple in the mountains" class="contact_img">
+  </div>
+  <div class="contact_points"></div>
+</main>
