--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
   </header>
 <main>
   <div>
-    <img src="images/Contact.jpeg" alt="Young couple in the mountains" class="contact_img">
+    <img src="images/wideimagecomp2.jpeg" alt="Young couple in the mountains" class="contact_img">
   </div>
-  <div class="contact_points"></div>
+  <div class="contact_points">
+    <img src="" >
+  </div>
 </main>
